--- a/README
+++ b/README
@@ -40,4 +40,5 @@ The test cases are separated by sep.
 The system-tests tag has the exact same syntax as example-tests.
 
 * Bugs:
-Please report bugs and help make this project better.
+Please report bugs and help make this project better! :)
+
